# SimART

./: .gitignore  .polyscope.ini  README.md  SimART_files_explanation.txt  download_sample_maps.sh  download_sample_rosbags.sh  requirements.txt
.github/workflows/: anti-spam-issues.yml
CreateMap/: CreateMap.md  CreateMap.zh-CN.md
SimART_GUI/: README.md  package.xml  resources.qrc
SimART_GUI/config/: base_stations.json
SimART_GUI/include/airsim_gui_UErealtime/: AirSimViewController.h  AppTypes.h  MainWindow.h  Scene3DWidget.h  UeViewWidget.h
SimART_GUI/launch/: gui_transform_path.launch  sionna_sim_only_topic.launch
SimART_GUI/markdown/: Compile_method.md  Usage_of_Sample_Maps.md  beamforming_v2_usage.md  beamforming_v3_usage.md  blender_procress.md
SimART_GUI/qml/: UeLiveView.qml  UeStationCameraView.qml
SimART_GUI/scripts/: airsim_image_bridge.py  deepsense_beam_selector.py  export_sionna_codebook.py  mock_publishers.py  path_to_rviz_odom.py  reprocess_rosbag_with_sionna.py  scene_bounds_from_xml.py  sionna_beam_topic_utils.py  sionna_ckm_generator.py  sionna_embed_launcher.py  sionna_internal_socket_bridge.py  sionna_resim_socket_worker.py  sionna_sim_only_topic2.py  sionna_tf_frame_utils.py  train_deepsense_beam_model.py  transform_coords.py
SimART_GUI/src/: AirSimSceneProvider.cpp  AirSimViewController.cpp  CkmMapWidget.cpp  DemoController.cpp  FileSceneProvider.cpp  FrameTransformManager.cpp  JsonConfig.cpp  MainWindow.cpp  OsmImportDialog.cpp  OsmMapWidget.cpp  OsmSceneProvider.cpp  RosBridge.cpp  Scene3DWidget.cpp  SceneManager.cpp  SionnaPreviewWidget.cpp  TransformUtils.cpp  UeViewWidget.cpp  main.cpp
Tutorials/CreateMap/: CreateMap.md  (+1 more)
agent/: CONTINUE_ON_NEW_MACHINE.md  README.md  __init__.py  compare_rf_bags.py  material_agent.py  material_asset_agent.py  requirements.txt  sionna_asset_tools.py  sionna_xml_tools.py
agent_outputs/: bigcity_confirmed_materials.csv  bigcity_fbx_material_inventory.csv  bigcity_fbx_material_inventory.json  bigcity_fixed_pose_rf_anchor_summary.csv  bigcity_fixed_pose_rf_deltas_vs_baseline.csv  bigcity_fixed_pose_rf_summary.csv  bigcity_key_material_parameter_template.csv  bigcity_material_parameter_template.csv  bigcity_rosbag_rf_one_snapshot_summary.csv  bigcity_sionna_material_strict_summary.csv  bigcity_small_object_material_sensitivity_manifest.csv  bigcity_strict_review_material_mapping.csv  bigcity_strict_review_material_mapping.json  bigcity_uncertain_materials.csv
markdown/: Maps.md  Usage.md
rf_msgs/: CMakeLists.txt  package.xml
scripts/: bigcity_fixed_pose_sensitivity_csv.py  run_bigcity_ckm_sensitivity.sh  run_bigcity_ckm_sensitivity_fast.sh  run_bigcity_fixed_pose_one_bag.sh  run_bigcity_fixed_pose_sensitivity.sh  run_bigcity_fixed_pose_sensitivity_csv.sh  run_bigcity_reflection_sensitivity_bags.sh
sionna_beam_msgs/: CMakeLists.txt  package.xml
sionna_beam_msgs/msg/: BeamCodebook.msg  BeamEntry.msg  BeamObservation.msg  BeamObservationArray.msg
sionna_sys_msgs/: CMakeLists.txt  package.xml
sionna_sys_msgs/msg/: SysCandidateObservation.msg  SysConfig.msg  SysObservationArray.msg  SysServingLink.msg
(+13 files in other folders)
