<?xml version="1.0"?>
<package format="2">
  <name>airsim_gui_UErealtime</name>
  <version>0.2.0</version>
  <description>3D desktop GUI demo for AirSim / ROS1 / Sionna-style beam paths using C++, Qt, and VTK.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rf_msgs</depend>
  <depend>sionna_sys_msgs</depend>
  <depend>sionna_beam_msgs</depend>

  <export/>
</package>
