<?xml version="1.0"?>
<package format="2">
  <name>sionna_beam_msgs</name>
  <version>0.1.0</version>
  <description>ROS message definitions for Sionna beam codebooks and per-base-station beam observations.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
