<?xml version="1.0"?>
<package format="2">
  <name>sionna_sys_msgs</name>
  <version>0.1.0</version>
  <description>ROS1 messages for Sionna SYS over RT observations and serving-link summaries.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export/>
</package>
